# Fallout1_Trainer_Example

./: .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  xmake.lua
f1_trainer/: __main__.py  application.py  files.py  fonts.py  styles.py
f1_trainer/lib/: dll_injection copy.py  dll_injection.py
f1_trainer/widgets/: window.py
f1_trainer_dll/: example_dll_injection_lib.h  f1_trainer.cpp  inject.cpp  test_dll_injection.cpp  xmake.lua
resources/: resources.qrc  styles.qss
resources/fonts/: Attribution.txt  NOT_FOR_DISTRIBUTION.md  font-names.sh
resources/styles/: _app.scss  main.scss
